cc/src/inputs/snapshots/cookiecluster__inputs__compute__tests__snapshot_instance_types-4.snap
---
source: cc/src/inputs/compute.rs
expression: efa_nvidia_x86_64
---
{
    "g4dn.12xlarge": InstanceInfo {
        instance_type: "g4dn.12xlarge",
        instance_storage_supported: true,
        efa_supported: true,
        nvidia_gpu_supported: true,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "g4dn.16xlarge": InstanceInfo {
        instance_type: "g4dn.16xlarge",
        instance_storage_supported: true,
        efa_supported: true,
        nvidia_gpu_supported: true,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "g4dn.8xlarge": InstanceInfo {
        instance_type: "g4dn.8xlarge",
        instance_storage_supported: true,
        efa_supported: true,
        nvidia_gpu_supported: true,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "g5.12xlarge": InstanceInfo {
        instance_type: "g5.12xlarge",
        instance_storage_supported: true,
        efa_supported: true,
        nvidia_gpu_supported: true,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "g5.16xlarge": InstanceInfo {
        instance_type: "g5.16xlarge",
        instance_storage_supported: true,
        efa_supported: true,
        nvidia_gpu_supported: true,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "g5.24xlarge": InstanceInfo {
        instance_type: "g5.24xlarge",
        instance_storage_supported: true,
        efa_supported: true,
        nvidia_gpu_supported: true,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "g5.48xlarge": InstanceInfo {
        instance_type: "g5.48xlarge",
        instance_storage_supported: true,
        efa_supported: true,
        nvidia_gpu_supported: true,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "g5.8xlarge": InstanceInfo {
        instance_type: "g5.8xlarge",
        instance_storage_supported: true,
        efa_supported: true,
        nvidia_gpu_supported: true,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "g6.12xlarge": InstanceInfo {
        instance_type: "g6.12xlarge",
        instance_storage_supported: true,
        efa_supported: true,
        nvidia_gpu_supported: true,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "g6.16xlarge": InstanceInfo {
        instance_type: "g6.16xlarge",
        instance_storage_supported: true,
        efa_supported: true,
        nvidia_gpu_supported: true,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "g6.24xlarge": InstanceInfo {
        instance_type: "g6.24xlarge",
        instance_storage_supported: true,
        efa_supported: true,
        nvidia_gpu_supported: true,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "g6.48xlarge": InstanceInfo {
        instance_type: "g6.48xlarge",
        instance_storage_supported: true,
        efa_supported: true,
        nvidia_gpu_supported: true,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "g6.8xlarge": InstanceInfo {
        instance_type: "g6.8xlarge",
        instance_storage_supported: true,
        efa_supported: true,
        nvidia_gpu_supported: true,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "gr6.8xlarge": InstanceInfo {
        instance_type: "gr6.8xlarge",
        instance_storage_supported: true,
        efa_supported: true,
        nvidia_gpu_supported: true,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "p3dn.24xlarge": InstanceInfo {
        instance_type: "p3dn.24xlarge",
        instance_storage_supported: true,
        efa_supported: true,
        nvidia_gpu_supported: true,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "p4d.24xlarge": InstanceInfo {
        instance_type: "p4d.24xlarge",
        instance_storage_supported: true,
        efa_supported: true,
        nvidia_gpu_supported: true,
        neuron_supported: false,
        cbr_supported: true,
        cpu_arch: "x86-64",
    },
    "p4de.24xlarge": InstanceInfo {
        instance_type: "p4de.24xlarge",
        instance_storage_supported: true,
        efa_supported: true,
        nvidia_gpu_supported: true,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "p5.48xlarge": InstanceInfo {
        instance_type: "p5.48xlarge",
        instance_storage_supported: true,
        efa_supported: true,
        nvidia_gpu_supported: true,
        neuron_supported: false,
        cbr_supported: true,
        cpu_arch: "x86-64",
    },
}
