cc/src/inputs/snapshots/cookiecluster__inputs__compute__tests__snapshot_instance_types-5.snap
---
source: cc/src/inputs/compute.rs
expression: neuron_x86_64
---
{
    "inf1.24xlarge": InstanceInfo {
        instance_type: "inf1.24xlarge",
        instance_storage_supported: false,
        efa_supported: true,
        nvidia_gpu_supported: false,
        neuron_supported: true,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "inf1.2xlarge": InstanceInfo {
        instance_type: "inf1.2xlarge",
        instance_storage_supported: false,
        efa_supported: false,
        nvidia_gpu_supported: false,
        neuron_supported: true,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "inf1.6xlarge": InstanceInfo {
        instance_type: "inf1.6xlarge",
        instance_storage_supported: false,
        efa_supported: false,
        nvidia_gpu_supported: false,
        neuron_supported: true,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "inf1.xlarge": InstanceInfo {
        instance_type: "inf1.xlarge",
        instance_storage_supported: false,
        efa_supported: false,
        nvidia_gpu_supported: false,
        neuron_supported: true,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "inf2.24xlarge": InstanceInfo {
        instance_type: "inf2.24xlarge",
        instance_storage_supported: false,
        efa_supported: false,
        nvidia_gpu_supported: false,
        neuron_supported: true,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "inf2.48xlarge": InstanceInfo {
        instance_type: "inf2.48xlarge",
        instance_storage_supported: false,
        efa_supported: false,
        nvidia_gpu_supported: false,
        neuron_supported: true,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "inf2.8xlarge": InstanceInfo {
        instance_type: "inf2.8xlarge",
        instance_storage_supported: false,
        efa_supported: false,
        nvidia_gpu_supported: false,
        neuron_supported: true,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "inf2.xlarge": InstanceInfo {
        instance_type: "inf2.xlarge",
        instance_storage_supported: false,
        efa_supported: false,
        nvidia_gpu_supported: false,
        neuron_supported: true,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "trn1.2xlarge": InstanceInfo {
        instance_type: "trn1.2xlarge",
        instance_storage_supported: true,
        efa_supported: false,
        nvidia_gpu_supported: false,
        neuron_supported: true,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "trn1.32xlarge": InstanceInfo {
        instance_type: "trn1.32xlarge",
        instance_storage_supported: true,
        efa_supported: true,
        nvidia_gpu_supported: false,
        neuron_supported: true,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "trn1n.32xlarge": InstanceInfo {
        instance_type: "trn1n.32xlarge",
        instance_storage_supported: true,
        efa_supported: true,
        nvidia_gpu_supported: false,
        neuron_supported: true,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
}
