cc/src/inputs/snapshots/cookiecluster__inputs__compute__tests__snapshot_instance_types-8.snap
---
source: cc/src/inputs/compute.rs
expression: efa_x86_64
---
{
    "c5n.18xlarge": InstanceInfo {
        instance_type: "c5n.18xlarge",
        instance_storage_supported: false,
        efa_supported: true,
        nvidia_gpu_supported: false,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "c5n.9xlarge": InstanceInfo {
        instance_type: "c5n.9xlarge",
        instance_storage_supported: false,
        efa_supported: true,
        nvidia_gpu_supported: false,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "c6a.48xlarge": InstanceInfo {
        instance_type: "c6a.48xlarge",
        instance_storage_supported: false,
        efa_supported: true,
        nvidia_gpu_supported: false,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "c6i.32xlarge": InstanceInfo {
        instance_type: "c6i.32xlarge",
        instance_storage_supported: false,
        efa_supported: true,
        nvidia_gpu_supported: false,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "c6id.32xlarge": InstanceInfo {
        instance_type: "c6id.32xlarge",
        instance_storage_supported: true,
        efa_supported: true,
        nvidia_gpu_supported: false,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "c6in.32xlarge": InstanceInfo {
        instance_type: "c6in.32xlarge",
        instance_storage_supported: false,
        efa_supported: true,
        nvidia_gpu_supported: false,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "c7a.48xlarge": InstanceInfo {
        instance_type: "c7a.48xlarge",
        instance_storage_supported: false,
        efa_supported: true,
        nvidia_gpu_supported: false,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "c7i.48xlarge": InstanceInfo {
        instance_type: "c7i.48xlarge",
        instance_storage_supported: false,
        efa_supported: true,
        nvidia_gpu_supported: false,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "dl1.24xlarge": InstanceInfo {
        instance_type: "dl1.24xlarge",
        instance_storage_supported: true,
        efa_supported: true,
        nvidia_gpu_supported: false,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "dl2q.24xlarge": InstanceInfo {
        instance_type: "dl2q.24xlarge",
        instance_storage_supported: false,
        efa_supported: true,
        nvidia_gpu_supported: false,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "g4dn.12xlarge": InstanceInfo {
        instance_type: "g4dn.12xlarge",
        instance_storage_supported: true,
        efa_supported: true,
        nvidia_gpu_supported: true,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "g4dn.16xlarge": InstanceInfo {
        instance_type: "g4dn.16xlarge",
        instance_storage_supported: true,
        efa_supported: true,
        nvidia_gpu_supported: true,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "g4dn.8xlarge": InstanceInfo {
        instance_type: "g4dn.8xlarge",
        instance_storage_supported: true,
        efa_supported: true,
        nvidia_gpu_supported: true,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "g5.12xlarge": InstanceInfo {
        instance_type: "g5.12xlarge",
        instance_storage_supported: true,
        efa_supported: true,
        nvidia_gpu_supported: true,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "g5.16xlarge": InstanceInfo {
        instance_type: "g5.16xlarge",
        instance_storage_supported: true,
        efa_supported: true,
        nvidia_gpu_supported: true,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "g5.24xlarge": InstanceInfo {
        instance_type: "g5.24xlarge",
        instance_storage_supported: true,
        efa_supported: true,
        nvidia_gpu_supported: true,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "g5.48xlarge": InstanceInfo {
        instance_type: "g5.48xlarge",
        instance_storage_supported: true,
        efa_supported: true,
        nvidia_gpu_supported: true,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "g5.8xlarge": InstanceInfo {
        instance_type: "g5.8xlarge",
        instance_storage_supported: true,
        efa_supported: true,
        nvidia_gpu_supported: true,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "g6.12xlarge": InstanceInfo {
        instance_type: "g6.12xlarge",
        instance_storage_supported: true,
        efa_supported: true,
        nvidia_gpu_supported: true,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "g6.16xlarge": InstanceInfo {
        instance_type: "g6.16xlarge",
        instance_storage_supported: true,
        efa_supported: true,
        nvidia_gpu_supported: true,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "g6.24xlarge": InstanceInfo {
        instance_type: "g6.24xlarge",
        instance_storage_supported: true,
        efa_supported: true,
        nvidia_gpu_supported: true,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "g6.48xlarge": InstanceInfo {
        instance_type: "g6.48xlarge",
        instance_storage_supported: true,
        efa_supported: true,
        nvidia_gpu_supported: true,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "g6.8xlarge": InstanceInfo {
        instance_type: "g6.8xlarge",
        instance_storage_supported: true,
        efa_supported: true,
        nvidia_gpu_supported: true,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "gr6.8xlarge": InstanceInfo {
        instance_type: "gr6.8xlarge",
        instance_storage_supported: true,
        efa_supported: true,
        nvidia_gpu_supported: true,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "i3en.12xlarge": InstanceInfo {
        instance_type: "i3en.12xlarge",
        instance_storage_supported: true,
        efa_supported: true,
        nvidia_gpu_supported: false,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "i3en.24xlarge": InstanceInfo {
        instance_type: "i3en.24xlarge",
        instance_storage_supported: true,
        efa_supported: true,
        nvidia_gpu_supported: false,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "i4i.32xlarge": InstanceInfo {
        instance_type: "i4i.32xlarge",
        instance_storage_supported: true,
        efa_supported: true,
        nvidia_gpu_supported: false,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "inf1.24xlarge": InstanceInfo {
        instance_type: "inf1.24xlarge",
        instance_storage_supported: false,
        efa_supported: true,
        nvidia_gpu_supported: false,
        neuron_supported: true,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "m5dn.24xlarge": InstanceInfo {
        instance_type: "m5dn.24xlarge",
        instance_storage_supported: true,
        efa_supported: true,
        nvidia_gpu_supported: false,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "m5n.24xlarge": InstanceInfo {
        instance_type: "m5n.24xlarge",
        instance_storage_supported: false,
        efa_supported: true,
        nvidia_gpu_supported: false,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "m5zn.12xlarge": InstanceInfo {
        instance_type: "m5zn.12xlarge",
        instance_storage_supported: false,
        efa_supported: true,
        nvidia_gpu_supported: false,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "m6a.48xlarge": InstanceInfo {
        instance_type: "m6a.48xlarge",
        instance_storage_supported: false,
        efa_supported: true,
        nvidia_gpu_supported: false,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "m6i.32xlarge": InstanceInfo {
        instance_type: "m6i.32xlarge",
        instance_storage_supported: false,
        efa_supported: true,
        nvidia_gpu_supported: false,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "m6id.32xlarge": InstanceInfo {
        instance_type: "m6id.32xlarge",
        instance_storage_supported: true,
        efa_supported: true,
        nvidia_gpu_supported: false,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "m6idn.32xlarge": InstanceInfo {
        instance_type: "m6idn.32xlarge",
        instance_storage_supported: true,
        efa_supported: true,
        nvidia_gpu_supported: false,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "m6in.32xlarge": InstanceInfo {
        instance_type: "m6in.32xlarge",
        instance_storage_supported: false,
        efa_supported: true,
        nvidia_gpu_supported: false,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "m7a.48xlarge": InstanceInfo {
        instance_type: "m7a.48xlarge",
        instance_storage_supported: false,
        efa_supported: true,
        nvidia_gpu_supported: false,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "m7i.48xlarge": InstanceInfo {
        instance_type: "m7i.48xlarge",
        instance_storage_supported: false,
        efa_supported: true,
        nvidia_gpu_supported: false,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "p3dn.24xlarge": InstanceInfo {
        instance_type: "p3dn.24xlarge",
        instance_storage_supported: true,
        efa_supported: true,
        nvidia_gpu_supported: true,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "p4d.24xlarge": InstanceInfo {
        instance_type: "p4d.24xlarge",
        instance_storage_supported: true,
        efa_supported: true,
        nvidia_gpu_supported: true,
        neuron_supported: false,
        cbr_supported: true,
        cpu_arch: "x86-64",
    },
    "p4de.24xlarge": InstanceInfo {
        instance_type: "p4de.24xlarge",
        instance_storage_supported: true,
        efa_supported: true,
        nvidia_gpu_supported: true,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "p5.48xlarge": InstanceInfo {
        instance_type: "p5.48xlarge",
        instance_storage_supported: true,
        efa_supported: true,
        nvidia_gpu_supported: true,
        neuron_supported: false,
        cbr_supported: true,
        cpu_arch: "x86-64",
    },
    "r5dn.24xlarge": InstanceInfo {
        instance_type: "r5dn.24xlarge",
        instance_storage_supported: true,
        efa_supported: true,
        nvidia_gpu_supported: false,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "r5n.24xlarge": InstanceInfo {
        instance_type: "r5n.24xlarge",
        instance_storage_supported: false,
        efa_supported: true,
        nvidia_gpu_supported: false,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "r6a.48xlarge": InstanceInfo {
        instance_type: "r6a.48xlarge",
        instance_storage_supported: false,
        efa_supported: true,
        nvidia_gpu_supported: false,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "r6i.32xlarge": InstanceInfo {
        instance_type: "r6i.32xlarge",
        instance_storage_supported: false,
        efa_supported: true,
        nvidia_gpu_supported: false,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "r6id.32xlarge": InstanceInfo {
        instance_type: "r6id.32xlarge",
        instance_storage_supported: true,
        efa_supported: true,
        nvidia_gpu_supported: false,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "r6idn.32xlarge": InstanceInfo {
        instance_type: "r6idn.32xlarge",
        instance_storage_supported: true,
        efa_supported: true,
        nvidia_gpu_supported: false,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "r6in.32xlarge": InstanceInfo {
        instance_type: "r6in.32xlarge",
        instance_storage_supported: false,
        efa_supported: true,
        nvidia_gpu_supported: false,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "r7a.48xlarge": InstanceInfo {
        instance_type: "r7a.48xlarge",
        instance_storage_supported: false,
        efa_supported: true,
        nvidia_gpu_supported: false,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "r7i.48xlarge": InstanceInfo {
        instance_type: "r7i.48xlarge",
        instance_storage_supported: false,
        efa_supported: true,
        nvidia_gpu_supported: false,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "r7iz.32xlarge": InstanceInfo {
        instance_type: "r7iz.32xlarge",
        instance_storage_supported: false,
        efa_supported: true,
        nvidia_gpu_supported: false,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "trn1.32xlarge": InstanceInfo {
        instance_type: "trn1.32xlarge",
        instance_storage_supported: true,
        efa_supported: true,
        nvidia_gpu_supported: false,
        neuron_supported: true,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "trn1n.32xlarge": InstanceInfo {
        instance_type: "trn1n.32xlarge",
        instance_storage_supported: true,
        efa_supported: true,
        nvidia_gpu_supported: false,
        neuron_supported: true,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "u7i-12tb.224xlarge": InstanceInfo {
        instance_type: "u7i-12tb.224xlarge",
        instance_storage_supported: false,
        efa_supported: true,
        nvidia_gpu_supported: false,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "u7in-16tb.224xlarge": InstanceInfo {
        instance_type: "u7in-16tb.224xlarge",
        instance_storage_supported: false,
        efa_supported: true,
        nvidia_gpu_supported: false,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "u7in-24tb.224xlarge": InstanceInfo {
        instance_type: "u7in-24tb.224xlarge",
        instance_storage_supported: false,
        efa_supported: true,
        nvidia_gpu_supported: false,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "u7in-32tb.224xlarge": InstanceInfo {
        instance_type: "u7in-32tb.224xlarge",
        instance_storage_supported: false,
        efa_supported: true,
        nvidia_gpu_supported: false,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "vt1.24xlarge": InstanceInfo {
        instance_type: "vt1.24xlarge",
        instance_storage_supported: false,
        efa_supported: true,
        nvidia_gpu_supported: false,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "x2idn.32xlarge": InstanceInfo {
        instance_type: "x2idn.32xlarge",
        instance_storage_supported: true,
        efa_supported: true,
        nvidia_gpu_supported: false,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "x2iedn.32xlarge": InstanceInfo {
        instance_type: "x2iedn.32xlarge",
        instance_storage_supported: true,
        efa_supported: true,
        nvidia_gpu_supported: false,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "x2iezn.12xlarge": InstanceInfo {
        instance_type: "x2iezn.12xlarge",
        instance_storage_supported: false,
        efa_supported: true,
        nvidia_gpu_supported: false,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
}
